--- a/style.css
+++ b/style.css
@@ -1,52 +1,98 @@
-.p{
-    text-align:center ;
-    background-color:#BCFF00;
-    height:230px;
-    width:230px;
-    Border:0;
-    color:#27282a;
-    margin-left:0px;
-    margin-right:0px;
-    margin-top:0px;
-    margin-bottom:0px;
-    border-color:#FF0000;
-    font-size:50px;
+body{
+  border: 0px;
+  padding: 0px;
+  margin:5px;
 }
-.op{
-  width:460px;
-  background-color:#202020;
-  color:#BCFF00;
+div.top {
+  height: 0.1vh;
+  width: 96vw;
+  text-align: right;
+  color: red;
 }
-.oop{
+
+div.second {
+  height: 10vh;
+}
+
+img {
+  float: left;
+  overflow: hidden;
+  height: 10vh;
+  width: 15vw;
+}
+
+h1 {
+  float: right;
+  overflow: hidden;
+  margin-right: 10vw;
+}
+
+div.scorecard {
+  background-color: grey;
+  border: 1px solid black;
+  padding: 1vh;
+  text-align: center;
+  width: 44.5vw;
+  float: left;
+}
+
+div.overview {
+  background-color: grey;
+  padding: 1vh;
+  border: 1px solid black;
+  text-align: center;
+  width: 44.5vw;
+  float: right;
+}
+
+a {
+  font-weight: bold;
+  color: black;
+  text-decoration: none;
+}#root{
+  height: 15vh;
+  overflow: hidden;
+}
+#border{
+  width: 49vw; 
+  border-right: 0.001vw solid white;
+  float: left;
+  overflow: hidden;
+ 
+}
+
+#ball p{
+  display: inline;
+  padding-left: 10px;
+}
+#border p {
   
-  background-color:#A9A9A9;
-  
+
 }
-button{
-    text-align:center ;
-    background-color:#FFFF00;
-    height:230px;
-    width:230px;
-    Border:0;
-    color:#27282a;
-    margin-left:0px;
-    margin-right:0px;
-    margin-top:0px;
-    margin-bottom:0px;
-    border-radius:100%;
-    
-    font-size:50px;
+#border2{
+  
+  text-align: center;
+  overflow: hidden;
+}
+#ball{
+  background-color: rgb(133, 8, 8);
+  padding:3vh;
+  color: white;
+  text-align: left;
+}
+#ball p{
+  margin-left: 10vw;
 }
 body{
-  background-color:#202020;
+  text-align: center;
+  
 }
 
+.one{
 
-.answer{
-    height:300px;
-    color:#FFFFFF;
-    width:700px;
-    background-color:#202020;
-    Border:0;
-    font-size:60px;
+}
+button{
+  background-color: white;
+  border: 1px solid rgb(133, 8, 8);
+  color: rgb(133, 8, 8);
 }
