--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
 
 div.scorecard {
   background-color: grey;
-  border: 1px solid black;
+  border: 1px solid white;
   padding: 1vh;
   text-align: center;
   width: 43vw;
