--- a/style.css
+++ b/style.css
@@ -1,98 +1,103 @@
 body{
-  border: 0px;
-  padding: 0px;
-  margin:5px;
+    border: 0px;
+    padding: 0px;
+    margin:5px;
+    text-align: center;
 }
 div.top {
-  height: 0.1vh;
-  width: 96vw;
-  text-align: right;
-  color: red;
+    height: 0.1vh;
+    width: 96vw;
+    text-align: right;
+    color: red;
 }
 
 div.second {
-  height: 10vh;
+    height: 10vh;
 }
 
 img {
-  float: left;
-  overflow: hidden;
-  height: 10vh;
-  width: 15vw;
+    float: left;
+    overflow: hidden;
+    height: 10vh;
+    width: 15vw;
 }
 
 h1 {
-  float: right;
-  overflow: hidden;
-  margin-right: 10vw;
+    float: right;
+    overflow: hidden;
+    margin-right: 3vw;
+    text-align: center;
 }
 
 div.scorecard {
-  background-color: grey;
-  border: 1px solid white;
-  padding: 1vh;
-  text-align: center;
-  width: 43vw;
-  float: left;
+    background-color: grey;
+    border: 1px solid black;
+    padding: 1vh;
+    text-align: center;
+    width: 45%;
+    float: left;
 }
 
 div.overview {
-  background-color: grey;
-  padding: 1vh;
-  border: 1px solid black;
-  text-align: center;
-  width: 43vw;
-  float: right;
+    background-color: grey;
+    padding: 1vh;
+    border: 1px solid black;
+    text-align: center;
+    width: 45%;
+    float: right;
 }
 
 a {
-  font-weight: bold;
-  color: black;
-  text-decoration: none;
-}#root{
-  height: 15vh;
-  overflow: hidden;
+    font-weight: bold;
+    color: black;
+    text-decoration: none;
+}
+
+#root{
+    height: 20vh;
+    overflow: hidden;
 }
 #border{
-  width: 49vw; 
-  border-right: 0.001vw solid white;
-  float: left;
-  overflow: hidden;
- 
+    width: 49vw; 
+    border-right: 0.001vw solid white;
+    float: left;
+    overflow: hidden;
+   
 }
 
 #ball p{
-  display: inline;
-  padding-left: 10px;
+    display: inline;
+    padding-left: 5vw
 }
-#border p {
-  
 
-}
 #border2{
-  
-  text-align: center;
-  overflow: hidden;
+    
+    text-align: center;
+    overflow: hidden;
 }
 #ball{
-  background-color: rgb(133, 8, 8);
-  padding:3vh;
-  color: white;
-  text-align: left;
-}
-#ball p{
-  margin-left: 10vw;
-}
-body{
-  text-align: center;
-  
+    overflow: hidden;
+    align-self: center;
+    overflow: hidden;
+    background-color: rgb(133, 8, 8);
+    height: 5vh;
+    color: white;
+    text-align: center;
+    padding-top: 1vh;
+    padding-right: 2vw;
 }
 
-.one{
 
-}
+
+
 button{
-  background-color: white;
-  border: 1px solid rgb(133, 8, 8);
-  color: rgb(133, 8, 8);
+    background-color: white;
+    border: 1px solid rgb(133, 8, 8);
+    color: rgb(133, 8, 8);
+}
+
+.one,.two,.three,.four,.five,.six{
+    padding:5vw;
+    width: 10vh;
+    height: 5vh;
 }
